// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <div
    className="abs-width-600"
  >
    <p
      className="big-spacer-bottom"
    >
      <SentenceWithHighlights
        highlightKeys={
          [
            "all_set",
          ]
        }
        translationKey="onboarding.tutorial.ci_outro.all_set"
      />
    </p>
    <div
      className="display-flex-row big-spacer-bottom"
    >
      <div>
        <img
          alt=""
          className="big-spacer-right"
          src="/images/tutorials/commit.svg"
          width={30}
        />
      </div>
      <div>
        <p
          className="little-spacer-bottom"
        >
          <strong>
            onboarding.tutorial.ci_outro.commit
          </strong>
        </p>
        <p>
          onboarding.tutorial.ci_outro.commit.why.github
        </p>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: with auto refresh 1`] = `
<Fragment>
  <div
    className="abs-width-600"
  >
    <p
      className="big-spacer-bottom"
    >
      <SentenceWithHighlights
        highlightKeys={
          [
            "all_set",
          ]
        }
        translationKey="onboarding.tutorial.ci_outro.all_set"
      />
    </p>
    <div
      className="display-flex-row big-spacer-bottom"
    >
      <div>
        <img
          alt=""
          className="big-spacer-right"
          src="/images/tutorials/commit.svg"
          width={30}
        />
      </div>
      <div>
        <p
          className="little-spacer-bottom"
        >
          <strong>
            onboarding.tutorial.ci_outro.commit
          </strong>
        </p>
        <p>
          onboarding.tutorial.ci_outro.commit.why.github
        </p>
      </div>
    </div>
    <div
      className="display-flex-row"
    >
      <div>
        <img
          alt=""
          className="big-spacer-right"
          src="/images/tutorials/refresh.svg"
          width={30}
        />
      </div>
      <div>
        <p
          className="little-spacer-bottom"
        >
          <strong>
            onboarding.tutorial.ci_outro.refresh
          </strong>
        </p>
        <p>
          onboarding.tutorial.ci_outro.refresh.why
        </p>
      </div>
    </div>
  </div>
  <div
    className="huge-spacer-bottom huge-spacer-top big-padded-top text-muted display-flex-center display-flex-justify-center"
  >
    <i
      className="spinner spacer-right"
    />
    onboarding.tutorial.ci_outro.waiting_for_fist_analysis
  </div>
</Fragment>
`;

exports[`should render correctly: without branch 1`] = `
<Fragment>
  <div
    className="abs-width-600"
  >
    <p
      className="big-spacer-bottom"
    >
      <SentenceWithHighlights
        highlightKeys={
          [
            "all_set",
          ]
        }
        translationKey="onboarding.tutorial.ci_outro.all_set"
      />
    </p>
    <div
      className="display-flex-row big-spacer-bottom"
    >
      <div>
        <img
          alt=""
          className="big-spacer-right"
          src="/images/tutorials/commit.svg"
          width={30}
        />
      </div>
      <div>
        <p
          className="little-spacer-bottom"
        >
          <strong>
            onboarding.tutorial.ci_outro.commit
          </strong>
        </p>
        <p>
          onboarding.tutorial.ci_outro.commit.why.no_branches
        </p>
      </div>
    </div>
  </div>
</Fragment>
`;
